fix router not found path err

--- a/src/views/download.ejs
+++ b/src/views/download.ejs
@@ -4,13 +4,11 @@
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Skyney Home</title>
+        <title>Skynet | Store</title>
         <link rel="stylesheet" href="/css/style.css" />
     </head>
 
     <body>
-        <!-- <img src="/img/logo.png" alt="Inshare logo" class="logo" /> -->
-
         <section class="download">
             <img
                 class="download__icon"
@@ -34,7 +32,7 @@
 
         <!-- github fork button -->
         <a
-            href="https://github.com/codersgyan"
+            href="https://github.com/masterchief01/skynet"
             target="_blank"
             class="github-corner"
             aria-label="View source on GitHub"
